2006-07-23  Matthias Wimmer  <m@tthias.eu>

    * clients.c: introducing client_send_sc_command()
    * jadc2s.h: makeing some function arguments const
    * util/util.h: same
    * util/nad.c: same
    * connect.c: updates in handling of new sc proto, bugfixes
    * conn.c: updates bounce handling

2006-07-22  Matthias Wimmer  <m@tthias.eu>

    * clients.c: do not update userid on stream restart after authentication,
    	do not report connections as not authenticated, if no username known

2006-07-20  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.c: stringpreping user ids using the nodeprep profile

2006-07-19  Matthias Wimmer  <m@tthias.eu>

    * clients.c: adding sc:c2s attribute before forwarding stanzas to sm
    * connect.c: sanity checks for right recipient

2006-07-15  Matthias Wimmer  <m@tthias.eu>

    * clients.c: implemented SASL authentication using cyrus SASL
    * mio/mio.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * configure.ac: same
    * connect.c: same
    * util/util.h: same
    * util/jid.c: same
    * conn.c: same

2006-05-21  Matthias Wimmer  <m@tthias.eu>

    * util/xhash.c: fixing xhash handling (key did match key123)

2006-05-20  Matthias Wimmer  <m@tthias.eu>

    * util/util.h: better memory performance for xhash
    * util/xhash.c: same

2006-04-27  Matthias Wimmer  <m@tthias.eu>

    * clients.c: support for HTTP forwards (patch by Tomasz Sterna)
    * jadc2s.c: same and support for writing connection count to file
    * jadc2s.h: same
    * jadc2s.xml.dist: same
    * mio/mio.c: epoll support (patch by Tomasz Sterna)
    * util/log.c: possibility to select syslog facility at configure time

2006-04-26  Matthias Wimmer  <m@tthias.eu>

    * clients.c: fixing a compiler warning of gcc

2005-11-22  Matthias Wimmer  <m@tthias.net>

    * configure.in: make IDN a requirement, check for GNU SASL

2005-11-01  Matthias Wimmer  <m@tthias.net>

    * mio/mio.c: changing typecast for accept() call to fix a compiler warning